# cliengine-precompiler

./: .gitignore  CMakeLists.txt  README.md
include/cliengine-precompiler/: Generator.hpp
src/: Generator.cpp  main.cpp
